--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -259,8 +259,10 @@
 }
 
 .rarity-section__rate-input {
-  flex: 1 1 6ch;
-  min-width: 0;
+  flex: 1 1 auto;
+  width: 100%;
+  min-width: 5rem;
+  max-width: 7rem;
 }
 
 @layer utilities {
